Add crate metadata.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "stdf"
 version = "0.1.0"
 authors = ["Casey Marshall <git@cmars.tech>"]
+description = "Standard Test Data Format (STDF) serialization and data processing"
+keywords = ["semiconductor", "test-equipment", "manufacturing"]
+categories = ["parser-implementations", "encoding"]
+license = "Apache-2.0"
 
 [dependencies]
 byte = "0.2"
