Complete support for nibble arrays and records that contain them.
Update stdf-record-derive to use "1.0" procedural macro deps.

Clean up stdf-record-derive macros quite a bit.

Test coverage for MPR reading / writing.

--- a/stdf-record-derive/Cargo.toml
+++ b/stdf-record-derive/Cargo.toml
@@ -6,9 +6,9 @@ description = "Procedural macros supporting the `stdf` crate"
 license = "Apache-2.0"
 
 [dependencies]
-syn = "0.15.21"
-quote = "0.6.10"
-proc-macro2 = "0.4.24"
+syn = { version = "1.0", features = ["printing"] }
+proc-macro2 = "1.0"
+quote = "1.0"
 
 [lib]
 proc-macro = true
